<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="zm.co.codelabs.utorr.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="zm.co.codelabs.utorr.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/AboutFragment"
        android:name="zm.co.codelabs.utorr.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_AboutFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>